<resources>
    <string name="app_name">GrabMovie</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="now_showing">Now Showing</string>
    <string name="favourites">Favourites</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="release">Release</string>
    <string name="genres">Genres</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
</resources>
